[package]
name = "solana-pumpfun-sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana dependencies
solana-client = "2.0"
solana-sdk = "2.0"
solana-program = "2.0"
spl-associated-token-account = "2.0"
spl-token = "6.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# gRPC and protobuf
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# HTTP client for price fetching
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
base64 = "0.22"
bs58 = "0.5"
hex = "0.4"
uuid = "1.0"

# Environment variables
dotenv = "0.15"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Mutex and synchronization
parking_lot = "0.12"

# Additional dependencies for new features
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"

[build-dependencies]
tonic-build = "0.12"
